--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -20,7 +20,8 @@
         {% if user.is_authenticated %}
         <a href ="{% url 'post_new' %}" class = "top-menu"><span class = "glyphicon glyphicon-plus"></span></a>
         {% endif %}
-        <h1><a href="{% url 'post_list' %}">HYWU Blog</a></h1>
+        <h1><a href="{% url 'post_list' %}">Yujin's Blog</a></h1>
+        <h4>Welcome to my blog!</h4>
     </div>
     <div class="content container">
       <div class="row">
