--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,8 +7,11 @@
         {{ post.published_date}}
       </div>
     {% endif %}
+    {% if post.image %}
+      <img src="{{ post.image.url }}" alt="Uploaded Image" style="max-width: 100%;">
+    {% endif %}
     {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+      <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
     {% endif %}
     <h1>{{post.title}}</h1>
     <p>{{post.text|linebreaksbr}}</p>
