--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-  <h1>New post</h1>
-  <form method="POST" class="post-form">{% csrf_token %}
+  <h1>Edit post</h1>
+  <form method="POST" class="post-form" enctype="multipart/form-data">{% csrf_token %}
     {{ form.as_p }}
+    {% if form.instance.image %}
+      <img src="{{ form.instance.image.url }}" alt="Uploaded Image" style="max-width: 100%;">
+    {% endif %}
     <button type="submit" class="save btn btn-default">Save</button>
   </form>
 {% endblock %}
